@@ -2,6 +2,7 @@
 * 0.2.12
 *
 
+- Added support for compressed MIB files
 - New MIBs added: ENTITY-MIB
 - Fixed issues: ???
 
